[gd_scene load_steps=39 format=3 uid="uid://csr2hraura2rp"]

[ext_resource type="Script" path="res://enemies/Frorg.gd" id="1_7lscv"]
[ext_resource type="Texture2D" uid="uid://dyuvi1vt3inec" path="res://enemies/frorg.png" id="2_uk0lm"]
[ext_resource type="Texture2D" uid="uid://c3hmdrojyv6sr" path="res://enemies/alert.png" id="3_4jkda"]
[ext_resource type="PackedScene" uid="uid://hxh0plu5p4ak" path="res://weapons/Gun.tscn" id="3_4kkdn"]
[ext_resource type="Script" path="res://enemies/AI.gd" id="4_v2b8f"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r1l6e"]
radius = 7.0
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_nbf32"]
atlas = ExtResource("2_uk0lm")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0elvn"]
atlas = ExtResource("2_uk0lm")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3axy8"]
atlas = ExtResource("2_uk0lm")
region = Rect2(352, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbpdb"]
atlas = ExtResource("2_uk0lm")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgpgp"]
atlas = ExtResource("2_uk0lm")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_du7cy"]
atlas = ExtResource("2_uk0lm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_buyp3"]
atlas = ExtResource("2_uk0lm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sry8a"]
atlas = ExtResource("2_uk0lm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_juw2n"]
atlas = ExtResource("2_uk0lm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aw3y"]
atlas = ExtResource("2_uk0lm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbt56"]
atlas = ExtResource("2_uk0lm")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i26r"]
atlas = ExtResource("2_uk0lm")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gd1h"]
atlas = ExtResource("2_uk0lm")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pivv"]
atlas = ExtResource("2_uk0lm")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofomj"]
atlas = ExtResource("2_uk0lm")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_piffq"]
atlas = ExtResource("2_uk0lm")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qof07"]
atlas = ExtResource("2_uk0lm")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu1ma"]
atlas = ExtResource("2_uk0lm")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs74j"]
atlas = ExtResource("2_uk0lm")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls2oh"]
atlas = ExtResource("2_uk0lm")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybqtq"]
atlas = ExtResource("2_uk0lm")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba6w0"]
atlas = ExtResource("2_uk0lm")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7hou"]
atlas = ExtResource("2_uk0lm")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqtuo"]
atlas = ExtResource("2_uk0lm")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg0lv"]
atlas = ExtResource("2_uk0lm")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjykq"]
atlas = ExtResource("2_uk0lm")
region = Rect2(256, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_unoeu"]
atlas = ExtResource("2_uk0lm")
region = Rect2(288, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mmnh"]
atlas = ExtResource("2_uk0lm")
region = Rect2(320, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_g4f2g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbf32")
}],
"loop": true,
"name": &"bark",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0elvn")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3axy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbpdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgpgp")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_du7cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buyp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sry8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juw2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aw3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbt56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i26r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gd1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pivv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofomj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_piffq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qof07")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu1ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs74j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls2oh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybqtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba6w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7hou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqtuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg0lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjykq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unoeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mmnh")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ucqvc"]
radius = 133.0

[sub_resource type="CircleShape2D" id="CircleShape2D_m6x4y"]
radius = 102.02

[sub_resource type="CircleShape2D" id="CircleShape2D_igxqh"]
radius = 45.0111

[node name="Frorg" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_7lscv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_r1l6e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_g4f2g")
animation = &"idle"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -9)
rotation = 0.53038
texture = ExtResource("3_4jkda")

[node name="Gun" parent="." instance=ExtResource("3_4kkdn")]
position = Vector2(0, -4)

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AI" type="Node2D" parent="."]
visible = false
script = ExtResource("4_v2b8f")

[node name="ChaseRadius" type="Area2D" parent="AI"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/ChaseRadius"]
shape = SubResource("CircleShape2D_ucqvc")
debug_color = Color(0.0352941, 0.65098, 0, 0.419608)

[node name="DetectionArea" type="Area2D" parent="AI" groups=["enemies"]]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/DetectionArea"]
shape = SubResource("CircleShape2D_m6x4y")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="FleeRadius" type="Area2D" parent="AI"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/FleeRadius"]
shape = SubResource("CircleShape2D_igxqh")
debug_color = Color(0.980392, 0, 0.364706, 0.419608)

[node name="AttackTimer" type="Timer" parent="AI"]
one_shot = true

[node name="MoveTimer" type="Timer" parent="AI"]
one_shot = true

[connection signal="gun_shot" from="Gun" to="AI" method="_on_gun_gun_shot"]
[connection signal="body_entered" from="AI/DetectionArea" to="AI" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="AI/DetectionArea" to="AI" method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="AI/FleeRadius" to="AI" method="_on_detection_area_body_entered"]
[connection signal="timeout" from="AI/AttackTimer" to="AI" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AI/MoveTimer" to="AI" method="_on_move_timer_timeout"]
